--- a/package.json
+++ b/package.json
@@ -36,5 +36,8 @@
     "tslib": "^2.3.1",
     "typescript": "~4.6.2"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "@sendgrid/mail": "^7.7.0"
+  }
 }
