--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
       - run:
           name: Run tests
           command: |
-            npx playwright install 
+            npx playwright install --with-deps
             npm run test
       - run:
           name: Run ESLint
