:green_heart: Try CI

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -142,7 +142,7 @@ workflows:
       - doc-dev:
           requires:
             - build
-            - test
+            # - test
           # filters:
           #   branches:
           #     only:
