:green_heart: Try ci

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -158,7 +158,7 @@ workflows:
       - doc-prod:
           requires:
             - build
-            - test
+            # - test
           filters:
             branches:
               only:
@@ -166,7 +166,7 @@ workflows:
       - build-prod:
           requires:
             - build
-            - test
+            # - test
           filters:
             branches:
               only:
