--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
           command: npm run lint
 
   doc-dev:
-    working_directory: ~/repoc
+    working_directory: ~/repo
       - image: cimg/node:16.13.2
     steps:
       - checkout
