--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -48,10 +48,10 @@ jobs:
             git config credential.helper 'cache --timeout=120'
             git config user.email "thomasgilletpc@gmail.com"
             git config user.name "Thomas GILLET [CI]"
-            git pull origin ci/test-and-docs
+            git pull
             git add docs
             git commit -m ":memo: Update documentation [ci skip]"
-            git push -q origin ci/test-and-docs
+            git push -q origin dev
   
   doc-prod:
     working_directory: ~/repo
@@ -98,10 +98,10 @@ jobs:
             git config credential.helper 'cache --timeout=120'
             git config user.email "thomasgilletpc@gmail.com"
             git config user.name "Thomas GILLET [CI]"
-            git pull ci/test-and-docs
+            git pull
             git add build
             git commit -m ":rocket: Push build [ci skip]"
-            git push -q origin ci/test-and-docs
+            git push -q origin dev
 
   build-prod:
     working_directory: ~/repo
@@ -136,29 +136,29 @@ workflows:
   build_and_test:
     jobs:
       - build
-      # - test:
-      #     requires:
-      #       - build
+      - test:
+          requires:
+            - build
       - doc-dev:
           requires:
             - build
-            # - test
-          # filters:
-          #   branches:
-          #     only:
-          #       - dev
+            - test
+          filters:
+            branches:
+              only:
+                - dev
       - build-dev:
           requires:
             - build
-            # - test
-          # filters:
-          #   branches:
-          #     only:
-          #       - dev
+            - test
+          filters:
+            branches:
+              only:
+                - dev
       - doc-prod:
           requires:
             - build
-            # - test
+            - test
           filters:
             branches:
               only:
@@ -166,7 +166,7 @@ workflows:
       - build-prod:
           requires:
             - build
-            # - test
+            - test
           filters:
             branches:
               only:
