--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "check:watch": "svelte-check --tsconfig ./tsconfig.json --watch",
     "lint": "eslint --ignore-path .gitignore .",
     "format": "prettier --ignore-path .gitignore --write --plugin-search-dir=. .",
-    "doc": "jsdoc -c jsdoc.conf.json --verbose"
+    "doc": "rm -rf docs && jsdoc -c jsdoc.conf.json --verbose"
   },
   "devDependencies": {
     "@playwright/test": "^1.21.0",
